--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,9 @@ nav {
 
 main {
     background-color: #cbd7fd;
+    border-top: 2px solid;
+    padding-top: 20px;
+    width: 100%;
 }
 
 aside {
@@ -34,6 +37,8 @@ footer {
 
 .middle {
     display: flex;
+    height: 95%;
+    width: 100%;
 }
 
 .wrapper {
@@ -44,12 +49,6 @@ footer {
 
 aside, nav {
     flex: 1;
-}
-
-main {
-    border-top: 2px solid;
-    padding-top: 20px;
-    width: 100%;
 }
 
 .menu-left {
@@ -95,6 +94,17 @@ main {
 .logo {
     width: 100%;
     height: 100px;
+}
+
+.gallery {
+    display: inline-block;
+    columns: 6 200px;
+    column-gap: 10px;    
+}
+
+.image-1 {
+    background-color: black;
+    width: 200px;
 }
 
 @media (max-width: 600px) {
