--- a/css/style.css
+++ b/css/style.css
@@ -97,9 +97,19 @@ aside, nav {
 }
 
 .gallery {
-    display: inline-block;
-    columns: 6 200px;
+    margin: 40px;
+    display: flex;    
+    flex-direction: row;
+    justify-content: center;        
+    flex-wrap: wrap;
+    width: 100%;
+
     column-gap: 10px;    
+}
+
+.gallery img {
+    width: 300px;
+    height: 300px;
 }
 
 .image-1 {
