--- a/css/style.css
+++ b/css/style.css
@@ -128,13 +128,28 @@ aside, nav {
     height: 200px;
 }
 
+.poke {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 220px;
+    height: 40%;
+    padding: 5px;
+    border: 1px solid;
+}
+
+.poke-1-data{
+    display: flex;
+    flex-direction: row;    
+}
+
 .btn_aceptar {
     margin: 5%;
     font-weight: bolder;
     font-style: italic;
 }
 
-.gallery_poke:hover {
+.poke:hover {
     cursor: pointer;
     border: 4px solid;
 }
