--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,7 @@ aside, nav {
     height: 40%;
     padding: 5px;
     border: 1px solid;
+    margin-bottom: 10px;
 }
 
 .poke-1-data{
@@ -152,6 +153,47 @@ aside, nav {
 .poke:hover {
     cursor: pointer;
     border: 4px solid;
+}
+
+.Labeldiv{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+}
+
+.label {
+    width: 100px;
+    height: 25px;
+    font-size: 16px;
+    margin: 0;    
+    border: 1px solid;
+    text-align:justify;
+    font-weight: bolder;
+    border-radius: 5px 0px 0px 5px;     
+}
+
+.pokeData{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.pData_Principal{
+    font-size: 14px;    
+    display: flex;
+    display: row;    
+    font-weight: bold;
+    text-align: center;        
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    height: 25px;
+    border: 1px solid; 
+    border-radius: 0px 5px 5px 0px;
+    margin: 0;   
 }
 
 @media (max-width: 600px) {
