--- a/css/style.css
+++ b/css/style.css
@@ -265,9 +265,15 @@ table th{
     }      
     
     .poke img {
-        width: 120px;
-        height: 120px;
+        width: 170px;
+        height: 170px;        
     } 
+
+    .poke {
+        margin-bottom: 20px;
+        border: 1px solid;
+        border-radius: 5px;
+    }
 
     table{     
         width: 300px;    
